RESOLVED FIXED238155
REGRESSION (r290794): [ iOS Debug ] 4 editing/selection/* tests are constant timeouts
https://bugs.webkit.org/show_bug.cgi?id=238155
Summary REGRESSION (r290794): [ iOS Debug ] 4 editing/selection/* tests are constant ...
Dawn Morningstar
Reported 2022-03-21 14:42:29 PDT
editing/selection/move-by-word-visually-single-space-one-element.html editing/selection/move-by-word-visually-single-space-inline-element.html editing/selection/move-by-word-visually-multi-line.html editing/selection/move-by-word-visually-mac.html Are all constantly timing out on iOS Debug queues. HISTORY: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=editing%2Fselection%2Fmove-by-word-visually-mac.html&test=editing%2Fselection%2Fmove-by-word-visually-multi-line.html&test=editing%2Fselection%2Fmove-by-word-visually-single-space-inline-element.html&test=editing%2Fselection%2Fmove-by-word-visually-single-space-one-element.html DIFF is a 404 timeout. Layout-Test-Results URL: https://build.webkit.org/results/Apple-iOS-15-Simulator-Debug-WK2-Tests/r291558%20(2017)/results.html editing/selection/move-by-word-visually-inline-block-positioned-element.html Appears to be related with a similar regression range, though it is a flaky timeout.
Attachments
Patch (4.61 KB, patch)
2022-03-26 17:13 PDT, Wenson Hsieh
ews-feeder: commit-queue-
Fix macOS build (4.65 KB, patch)
2022-03-26 17:17 PDT, Wenson Hsieh
no flags
Radar WebKit Bug Importer
Comment 1 2022-03-21 14:43:06 PDT
Dawn Morningstar
Comment 2 2022-03-21 14:50:10 PDT
Suspected regression point: r290794 as this is the only revision that modifies iOS in range, but further testing is required to confirm. ([iOS] Further reduce hangs underneath)
Wenson Hsieh
Comment 3 2022-03-21 14:51:53 PDT
(In reply to Matteo Flores from comment #2) > Suspected regression point: r290794 as this is the only revision that > modifies iOS in range, but further testing is required to confirm. > ([iOS] Further reduce hangs underneath) I think this makes sense, as a regression point. That said, I think these tests should eventually finish (it just takes longer now). There might be some adjustments we can make to keep these tests within the time limit for non-fast layout tests, though — I'll take a look
Dawn Morningstar
Comment 4 2022-03-21 14:53:47 PDT
(In reply to Wenson Hsieh from comment #3) > (In reply to Matteo Flores from comment #2) > > Suspected regression point: r290794 as this is the only revision that > > modifies iOS in range, but further testing is required to confirm. > > ([iOS] Further reduce hangs underneath) > > I think this makes sense, as a regression point. > > That said, I think these tests should eventually finish (it just takes > longer now). There might be some adjustments we can make to keep these tests > within the time limit for non-fast layout tests, though — I'll take a look Perfect I also thought the same thing, that they just take longer now. There always is the option as marking these as [ Slow ].
Wenson Hsieh
Comment 5 2022-03-21 14:54:30 PDT
(In reply to Matteo Flores from comment #4) > (In reply to Wenson Hsieh from comment #3) > > (In reply to Matteo Flores from comment #2) > > > Suspected regression point: r290794 as this is the only revision that > > > modifies iOS in range, but further testing is required to confirm. > > > ([iOS] Further reduce hangs underneath) > > > > I think this makes sense, as a regression point. > > > > That said, I think these tests should eventually finish (it just takes > > longer now). There might be some adjustments we can make to keep these tests > > within the time limit for non-fast layout tests, though — I'll take a look > > Perfect I also thought the same thing, that they just take longer now. There > always is the option as marking these as [ Slow ]. Oh, good point. Perhaps we could try that first, and see if it mitigates these failures? (While I continue to investigate).
Dawn Morningstar
Comment 6 2022-03-21 14:57:37 PDT
(In reply to Wenson Hsieh from comment #5) > Oh, good point. Perhaps we could try that first, and see if it mitigates > these failures? (While I continue to investigate). Indeed I will do that right away.
Dawn Morningstar
Comment 7 2022-03-21 15:15:54 PDT
r291584 Slow expectation has been set. Hopefully this will resolve the issue.
Alexey Proskuryakov
Comment 8 2022-03-21 22:12:36 PDT
Looks like this helped three of them, but not editing/selection/move-by-word-visually-multi-line.html
Wenson Hsieh
Comment 9 2022-03-26 17:13:33 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 10 2022-03-26 17:17:38 PDT
Created attachment 455862 [details] Fix macOS build
Wenson Hsieh
Comment 11 2022-03-28 14:23:05 PDT
Comment on attachment 455862 [details] Fix macOS build Thanks for the review!
EWS
Comment 12 2022-03-28 16:24:59 PDT
Committed r292005 (248955@main): <https://commits.webkit.org/248955@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 455862 [details].
Wenson Hsieh
Comment 13 2022-03-28 18:24:10 PDT
*** Bug 238479 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.